--- a/index-2.html
+++ b/index-2.html
@@ -9,5 +9,7 @@
 <body>
      <h1>somesh paul</h1>
      <h2>paul somesh</h2>
+     <h3>somesh is a handsome hunk</h3>
+     <h4>somesh is genuis</h4>
 </body>
 </html>
