skipped staging area and fixed <

--- a/somesh.html
+++ b/somesh.html
@@ -7,6 +7,9 @@
     <title>swiggy.com</title>
 </head>
 <body>
-    
+    <h1>somesh paul</h1>
+    <h2>paul somesh </h2>
+    <h3>somesh is a genious </h3>
+    <h4>somesh is a birn champion</h4>
 </body>
 </html>
